fix: z-index of small navigation menu

--- a/store/src/styles/components/header.scss
+++ b/store/src/styles/components/header.scss
@@ -253,6 +253,7 @@
 }
 .hern-navigatin-menu__wrapper--mobile--layout-one {
    top: 80px;
+   z-index: 999;
 }
 
 .hern-header-stickey {
